--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,3 +2,6 @@ label.title=CMS
 message.badCredentials=Invalid username or password
 
 negativeValue={0} can't be negative or zero
+
+firstname.required="firstname required"
+lastname.required="lastname required"
