Fix jsp with validation on remind date and anniversery date

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,5 +3,30 @@ message.badCredentials=Invalid username or password
 
 negativeValue={0} can't be negative or zero
 
-firstname.required="firstname required"
-lastname.required="lastname required"
+firstname.required=you can't leave Firstname with empty
+Firstname.size=Firstname between 3 and 32 characters
+lastname.required=you can't leave Lastname with empty
+lastname.size=Lastname between 3 and 32 characters
+username.required=you cann't leave Username with empty
+Username.size=Username between 3 and 32 characters
+Duplicate.username=Someone already has that Username
+email.required=you cann't leave Email with empty
+Duplicate.email=Someone already has that Email
+email.valid=Enter valid Email
+password.required=you cann't leave Password with empty
+Password.size=Password between 6 and 32 characters
+repassword.required=you cann't leave Re-Password with empty
+Diff.userForm.passwordConfirm=These passwords don't match.
+birthdate.required=you cann't leave Birthdate with empty
+aniversarydate.required=you cann't leave Anniversery Date with empty
+homeadd.required=you cann't leave home Address with empty
+offadd.required=you cann't leave office Address with empty
+pancardnum.required=you cann't leave Pan Number with empty
+aadharnum.required=you cann't leave Adhar Number with empty
+zipcode.required=you cann't leave ZipCode with empty	
+gstin.required=you cann't leave Gstin Number with empty
+onlyalphabet=insert only Letter
+zipcode.size=Enter valid Zipcode
+pannumber.validation=Enter valid PanCard Number
+adharnumber.validation=Enter valid AdharCard Number
+gstin.validation=Enter valid Gstin Number
