--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -16,7 +16,7 @@ email.valid=Enter valid Email
 password.required=you cann't leave Password with empty
 Password.size=Password between 6 and 32 characters
 repassword.required=you cann't leave Re-Password with empty
-Diff.userForm.passwordConfirm=These passwords don't match.
+Diff.userForm.passwordConfirm=Re-Passwords don't match.
 birthdate.required=you cann't leave Birthdate with empty
 aniversarydate.required=you cann't leave Anniversery Date with empty
 homeadd.required=you cann't leave home Address with empty
@@ -25,7 +25,8 @@ pancardnum.required=you cann't leave Pan Number with empty
 aadharnum.required=you cann't leave Adhar Number with empty
 zipcode.required=you cann't leave ZipCode with empty	
 gstin.required=you cann't leave Gstin Number with empty
-onlyalphabet=insert only Letter
+Firstname.onlyalphabet=Enter Valid Firstname
+Lastname.onlyalphabet=Enter Valid Lastname 
 zipcode.size=Enter valid Zipcode
 pannumber.validation=Enter valid PanCard Number
 adharnumber.validation=Enter valid AdharCard Number
